<?xml version="1.0" encoding="utf-8"?>
<!--
# Copyright (c) 2012, The Linux Foundation. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#    * Redistributions in binary form must reproduce the above
#      copyright notice, this list of conditions and the following
#      disclaimer in the documentation and/or other materials provided
#      with the distribution.
#    * Neither the name of Linux Foundation nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
# ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
# OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# -->
<resources>
    <string name="hello">Hello World, mainScreen!</string>
    <string name="app_name">GattClientTest</string>
    <string name="Get_BT_devices">Get BT devices</string>

    <string name="Connected_Devices">Connected Devices</string>
    <string name="Configure">Configure</string>
    <string name="Min_Int">Min_Int</string>
    <string name="Max_Int">Max_Int</string>
    <string name="Latency">Latency</string>
    <string name="Timeout">Timeout</string>
    <string name="ListOfConnectedDevices">List Of Connected Devices</string>
    <string name="ClearDevices">Clear Devices</string>
    <string name="SetCharValue">Set Value</string>
    <string name="UpdateCharValue">Update Value</string>
    <string name="CharCliConf">Characteristic cli conf</string>
    <string name="UpdateCliConf">Set Cli Conf</string>
    <string name="textValueTitle">TextView</string>
    <string name="textValue">TextView</string>
    <string name="editValue">EditText</string>

    <string name="enableWatcher">Enable Watcher</string>
    <string name="disableWatcher">Disable Watcher</string>
    <string name="NotificationIndication">Notification Indication</string>
    <string name="ClearNotificationIndication">Clear Notification Indication</string>
    <string name="CloseService">Close Service</string>

</resources>
