<?xml version="1.0" encoding="utf-8"?>
<!--
# Copyright (c) 2012, The Linux Foundation. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#    * Redistributions in binary form must reproduce the above
#      copyright notice, this list of conditions and the following
#      disclaimer in the documentation and/or other materials provided
#      with the distribution.
#    * Neither the name of Linux Foundation nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
# ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
# OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
# -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <Button android:text="@string/Get_BT_devices" android:layout_height="wrap_content" android:id="@+id/buttonConnect" android:layout_width="match_parent"></Button>
    <Button android:text="@string/Connected_Devices" android:layout_height="wrap_content" android:id="@+id/buttonConnectedDevices" android:layout_width="match_parent"></Button>
    <Button android:text="@string/Configure" android:layout_height="wrap_content" android:id="@+id/buttonConfigure" android:layout_width="match_parent"></Button>
    <ListView android:id="@+id/someList" android:layout_height="wrap_content" android:layout_width="match_parent"></ListView>
    <EditText android:id="@+id/uuidText" android:layout_height="wrap_content" android:text="@string/editValue" android:layout_width="match_parent"></EditText>

    <TextView android:text="@string/Min_Int" android:id="@+id/textMinInt" android:textSize="10dp" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:id="@+id/editMinInt" android:layout_height="30dp" android:layout_width="100dp" android:textSize="10dp" android:text="@string/editValue"></EditText>
    <TextView android:text="@string/Max_Int" android:id="@+id/textMaxInt" android:textSize="10dp" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:id="@+id/editMaxInt" android:layout_height="30dp" android:layout_width="100dp" android:textSize="10dp" android:text="@string/editValue"></EditText>
    <TextView android:text="@string/Latency" android:id="@+id/textLatency" android:textSize="10dp" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:id="@+id/editLatency" android:layout_height="30dp" android:layout_width="100dp" android:textSize="10dp" android:text="@string/editValue" ></EditText>
    <TextView android:text="@string/Timeout" android:id="@+id/textTimeout" android:textSize="10dp" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
    <EditText android:id="@+id/editTimeout" android:layout_height="30dp" android:layout_width="100dp" android:textSize="10dp" android:text="@string/editValue"></EditText>

</LinearLayout>
